//Protocol.proto 예시

syntax = "proto3";
package Protocol;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Google.Protobuf.Protocol";

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  //repeated == C#List같은거임
  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
}

message User{
    string userID = 1;
    string token = 2;
    string ip = 3;
}

message GetRequest {
    string requestWord = 1;
}
message IDSet
{
    string password = 1;
    string id = 2;
}

message KeyNumberReq {
    string requestWord = 1;
    int32 requestNumb = 2;
}

service ServiceTest {
    rpc firstEvent(GetRequest) returns (GetRequest);
    rpc secondEvent(KeyNumberReq) returns (KeyNumberReq);
}

message GetUserDB{
    int32 index = 1;
    string id = 2;
    string pw = 3;
}
message TryResults{
    bool result =1;
    string errorText = 2;
}
message ChatMessage
{
    string userName =1;
    string chattingText = 2;
    int64 time = 3;
    string roomName =4;
}

service DBRequest{
    rpc GetUserInfo(GetRequest) returns (GetUserDB);
    rpc RegistUser(IDSet) returns(TryResults);
    rpc DeleteUser(IDSet) returns(TryResults);
    rpc Chatting(stream ChatMessage) returns(stream ChatMessage);
    rpc DeleteChatRoom(GetRequest) returns(TryResults);
    rpc JoinChatRoom(ChatMessage) returns(stream ChatMessage);
    rpc CreateChatRoom(stream ChatMessage) returns(TryResults);
    rpc UpdateChatRoom(GetRequest) returns(TryResults);
    rpc ExitChatRoom(GetRequest) returns(TryResults);
}

// Our address book file is just one of these.
message AddressBook {
  repeated Person people = 1;
}